# honeycomb

./: .gitignore  Cargo.toml  README.md  honeycomb_dev.config.json
mock/: brands.json  versions.json
mock/profiles/: vanilla-latest.json
src/: cli.rs  config.rs  main.rs  mock_data.rs  profile.rs
