[package]
name = "honeycomb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = { version = "1.0.13", features = [ "serde" ] }

clap = { version = "3.2.17", features = [ "derive" ] }
#clap-nested = "0.4.0"

serde = { version = "1.0.144", features = [ "derive" ] }
serde_json = "1.0.85"

dialoguer = { version = "0.10.2", features = [ "completion", "password" ] }
indicatif = "0.17.0"
console = "0.15.1"
